FIX: ensure sidebar-container is always at top on mobile

--- a/assets/stylesheets/common/layouts-mobile.scss
+++ b/assets/stylesheets/common/layouts-mobile.scss
@@ -90,6 +90,7 @@ aside.sidebar.mobile {
     border-right: 1px solid var(--primary-low);
     position: absolute;
     max-width: 80%;
+    top: 0;
     
     .sidebar-content {
       height: 100%;
